--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -14,7 +14,7 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background-image: url("background.png");
+  /* background-image: url("background.png"); */
   font-family: var(--font-default);
   font-size: 18px;
   max-width: 1300px;
@@ -35,10 +35,10 @@ img {
   margin: 3.5%;
 }
 .header-logo {
-    float: left;
+  float: left;
 }
 .main-navbar {
-    float: right;
+  float: right;
 }
 .topnav a {
   float: left;
@@ -69,7 +69,9 @@ img {
 }
 
 @media screen and (max-width: 768px) {
-  .topnav a {display: none;}
+  .topnav a {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
@@ -77,7 +79,9 @@ img {
 }
 
 @media screen and (max-width: 768px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+  }
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
@@ -90,16 +94,16 @@ img {
   }
 }
 
-
-
- @media screen and (max-width: 540px) {
-  .topnav a {display: none;}
+@media screen and (max-width: 540px) {
+  .topnav a {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
     margin-top: -15px;
   }
-} 
+}
 
 main {
   font-size: 130%;
@@ -111,8 +115,6 @@ main {
   margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
-
-
 }
 
 .modal-btn {
@@ -140,6 +142,7 @@ main {
 /* Modal form */
 
 .button {
+  animation-duration: 8s;
   background: #fe142f;
   margin-top: 0.5em;
   padding: 1em;
@@ -181,6 +184,51 @@ main {
   position: relative;
   color: #fff;
   padding-top: 10px;
+}
+/* Page de confirmation */
+.bground2 {
+  display: none;
+  position: fixed;
+  z-index: 2;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(26, 39, 156, 0.4);
+}
+.content2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin: 5% auto;
+  width: 100%;
+  height: 500px;
+  max-width: 500px;
+  /* animation-name: modalopen;
+  animation-duration: var(--modal-duration); */
+  background: #232323;
+  border-radius: 10px;
+  overflow: hidden;
+  position: relative;
+  color: #fff;
+  padding-top: 10px;
+}
+.texte-comfirmation {
+  text-align: center;
+  padding-bottom: 10em;
+}
+.btn-close {
+  background: #fe142f;
+  display: block;
+  margin: 0 auto;
+  border-radius: 7px;
+  font-size: 1rem;
+  padding: 12px 82px ;
+  color: #fff;
+  cursor: pointer;
+  border: 0;
+  margin-bottom: 15px;
 }
 
 .modal-body {
@@ -226,12 +274,12 @@ input {
 .formData[data-error-visible="true"] .text-control {
   border: 2px solid #e54858;
 }
-/* 
+
 input[data-error]::after {
     content: attr(data-error);
     font-size: 0.4em;
     color: red;
-} */
+}
 .checkbox-label,
 .checkbox2-label {
   position: relative;
@@ -323,6 +371,7 @@ input[data-error]::after {
 }
 .btn-submit,
 .btn-signup {
+
   background: #fe142f;
   display: block;
   margin: 0 auto;
@@ -529,6 +578,9 @@ footer {
 
 /* ajout css */
 
-.errorMessage{
+.errorMessage {
+  display: none;
+}
+.errorMsg {
   display: none;
 }
